<resources>
    <string name="app_name">SendMeal</string>
    <string name="nameLbl">Nombre</string>
    <string name="enterName">Ingrese su nombre</string>
    <string name="passwordLbl">Contraseña</string>
    <string name="repeatPassword">Repita la contraseña</string>
    <string name="emailLbl">Correo Electrónico</string>
    <string name="cardNumberLbl">Número de tarjeta de crédito</string>
    <string name="CCVLbl">CCV</string>
    <string name="dateLbl">Fecha de vencimiento</string>
    <string name="enterPassword">Ingrese la contraseña</string>
    <string name="enterEmail">Ingrese su e-mail</string>
    <string name="enterCardNumber">Ingrese el número de tarjeta de crédito</string>
    <string name="enterCCV">Ingrese el código de seguridad</string>
    <string name="enterDate">MM/AA</string>
    <string name="selectAccountLbl">Tipo de cuenta</string>
    <string name="basicAccount">Básica</string>
    <string name="premiumAccount">Premium</string>
    <string name="fullAccount">Full</string>
    <string name="initialCredit">Crédito Inicial</string>
    <string name="notSendNotifBtn">No enviar notificaciones al mail</string>
    <string name="sendNotifBtn">Enviar notificaciones al mail</string>
    <string name="isSeller">Es vendedor</string>
    <string name="CBUAlias">Alias CBU</string>
    <string name="CBU">CBU</string>
    <string name="termsLbl">Acepta términos y condiciones</string>
    <string name="registerBtn">Registrar</string>
    <string name="errorEmptyField">Este campo no puede estar vacío</string>
    <string name="errorEmptyPassword">Debe ingresar una contraseña</string>
    <string name="errorRepeatPassword">Las contraseñas deben ser iguales</string>
    <string name="initialCreditAmount">$ 100</string>
    <string name="errorToast">Datos incorrectos.</string>
    <string name="successToast">Datos ingresados correctamente</string>
    <string name="emailInvalid">Ingrese un email válido</string>
    <string name="errorInvalidCardDate">Ingrese una fecha valida</string>
    <string name="errorInvalidCCV">Ingrese un CCV valido</string>
    <string name="registerOption">Registrarme</string>
    <string name="createItemOption">Crear Item</string>
    <string name="itemListOption">Lista de Items</string>
    <string name="idDishLbl">ID Plato</string>
    <string name="enterIdDish">Ingrese el ID</string>
    <string name="dishNameLbl">Nombre del plato</string>
    <string name="enterDishName">Ingrese el nombre</string>
    <string name="dishDescriptionLbl">Descripción del plato</string>
    <string name="enterDishDescription">Ingrese la descripción</string>
    <string name="dishPriceLbl">Precio del plato</string>
    <string name="enterDishPrice">Ingrese el precio</string>
    <string name="dishCaloriesLbl">Calorías del plato</string>
    <string name="enterDishCalories">Ingrese las calorías</string>
    <string name="saveDishBtn">Guardar</string>
    <string name="back">Atrás</string>
    <string name="registerTitle">Registrar usuario</string>
    <string name="createTitle">Crear nuevo plato</string>
    <string name="invalidDishId">Ingrese un ID válido</string>
    <string name="emptyFieldCreateActivity">Este campo no puede estar vacío</string>
    <string name="invalidDishPrice">Ingrese un precio válido</string>
    <string name="invalidDishCalories">Ingrese un valor válido</string>
    <string name="dishPriceListLabel">Precio: </string>
    <string name="dishViewTitle">Platos disponibles</string>
    <string name="offerBtn">OFERTA</string>
    <string name="editBtn">EDITAR</string>
    <string name="removeBtn">QUITAR</string>
    <string name="removeDishQuestion">¿ESTÁ SEGURO QUE DESEA ELIMINAR EL PLATO SELECCIONADO?</string>
    <string name="ok">Sí</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="selectOffer">Seleccione un porcentaje de oferta</string>
    <string name="percentageOver100">El porcentaje no puede ser mayor a 100%</string>
    <string name="offer100p">¿Está seguro de que desea poner una oferta de 100%?</string>
    <string name="offer0p">No puede poner una oferta de 0%</string>
    <string name="no">No</string>
    <string name="noPercentage">Debe ingresar un porcentaje.</string>
    <string name="CHANNEL_ID">idDeCanal</string>
    <string name="notification_title">¡Hay una nueva oferta!</string>
    <string name="notification_content">Toca para ver qué plato está en oferta.</string>
    <string name="separatorLbl"> - </string>
    <string name="minPriceEdit">Min</string>
    <string name="maxPriceEdit">Max</string>
    <string name="search">Buscar</string>
    <string name="errorEmptyFields">Debes llenar al menos un campo.</string>
    <string name="dishUpdateSuccess">Se actualizó el plato correctamente.</string>
    <string name="databaseSaveDishError">Se produjo un error al intentar guardar el plato en la base de datos.</string>
    <string name="pleaseWait">Por favor espere</string>
    <string name="loadingDishData">Cargando datos del plato seleccionado.</string>
    <string name="databaseGetDishError">Se produjo un error al obtener el plato de la base de datos.</string>
    <string name="databaseGetAllDishesError">Se produjo un error al obtener los platos de la base de datos.</string>
    <string name="loadingDishListFromDatabase">Cargando lista de platos de la base de datos.</string>
    <string name="databaseDeleteDishError">Se produjo un error al intentar eliminar el plato de la base de datos.</string>
    <string name="dishDeleteSuccess">El plato fue eliminado correctamente de la base de datos.</string>
    <string name="newOrderOptionItem">Nuevo pedido</string>
    <string name="createOrderBtn">Crear pedido</string>
    <string name="sendOrderBtn">Enviar pedido</string>
    <string name="noItemSelected">Debe seleccionar al menos un plato para crear un pedido</string>
    <string name="orderCreated">El pedido ha sido creado exitosamente</string>
    <string name="titleAlertDialogPedidoCreateActivity">¿Estás seguro que deseas volver?</string>
    <string name="pedidoNoEnviadoMsgAlertDialogPedidoCreateActivity">El pedido no será enviado.</string>
    <string name="pedidoNoGuardado">El pedido no será guardado.</string>
    <string name="databaseSavePedidoError">Se produjo un error al guardar su pedido en la base de datos</string>
    <string name="welcomeLbl">BIENVENIDO</string>
    <string name="toolbarTitleOfferNotificationActivity">Oferta</string>
    <string name="databaseGetAllPedidosError">Error al obtener los pedidos de la base de datos.</string>
    <string name="orderMarkerTitle">Pedido N°</string>
    <string name="orderSent">Pedido Enviado</string>
    <string name="locationSelectError">Se produjo un error al seleccionar la ubicación.</string>
    <string name="newOrderState">Estado del pedido</string>
    <string name="quantityDishLbl">Cantidad</string>
    <string name="idPedidoLbl">ID pedido</string>
    <string name="orderStateLbl">Estado del pedido</string>
    <string name="totalPriceLbl">Precio total</string>
    <string name="databaseGetPedidoError">Se produjo un error al obtener el pedido de la base de datos.</string>
    <string name="loadingOrderData">Cargando datos del pedido</string>
    <string name="amount">Cantidad</string>
    <string name="takePictureBtn">Tomar foto</string>
    <string name="noImageAlert">No seleccionó ninguna imagen</string>
    <string name="noImageAlertMessage">¿Está seguro que desea guardar el plato sin imagen?</string>
</resources>
