<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:orderInCategory="300"
        android:title="User"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>